--- a/_posts/0000-01-02-pedrodmg.md
+++ b/_posts/0000-01-02-pedrodmg.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to Pedro's slide"
 ---
 This is pedro's slide
 Use the left arrow to go back!
