--- a/_posts/0000-01-02-pedrodmg.md
+++ b/_posts/0000-01-02-pedrodmg.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to Pedro's slide"
 ---
-This is pedro's slide
+This is my awesome slide
 Use the left arrow to go back!
